[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/UITowerShop/UITowerShop.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/UIGoldPanel/UIGoldPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/UIScreenOverlay/UIScreenOverlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://Actors/Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game.gd" type="Script" id=6]

[node name="Game" type="Node"]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 5 )]
gold = 500

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="Control" parent="UILayer/UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UITowerShop" parent="UILayer/UI/HUD" instance=ExtResource( 1 )]
margin_top = -254.0
margin_bottom = -70.0
mouse_filter = 2

[node name="UIGoldPanel" parent="UILayer/UI/HUD" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -64.0
margin_right = 112.0
margin_bottom = 0.0

[node name="StartButton" type="Button" parent="UILayer/UI/HUD"]
anchor_left = 0.633854
anchor_top = 0.973148
anchor_right = 0.633854
anchor_bottom = 0.973148
margin_left = -60.0
margin_top = -34.0
margin_right = 80.0
margin_bottom = 6.0
text = "Start!"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RetryButton" type="Button" parent="UILayer/UI/HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -20.0
margin_right = 70.0
margin_bottom = 20.0
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseBarrier" type="Control" parent="UILayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UIScreenOverlay" parent="UILayer/UI" instance=ExtResource( 4 )]
visible = true

[node name="Level" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="UILayer/UI/HUD/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="UILayer/UI/HUD/RetryButton" to="." method="_on_RetryButton_pressed"]
